--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,131 @@
+@-webkit-keyframes muthybaby_intro {
+    0% {
+      width: 30%;
+      height: 30%;
+    }
+  
+    100% {
+      width: 50%;
+      height: 50%
+    }
+}
+  
+@keyframes muthybaby_intro {
+    0% {
+        width: 30%;
+        height: 30%;
+    }
+
+    100% {
+        width: 50%;
+        height: 50%
+    }
+}
+
+@-webkit-keyframes link_hover {
+    0% {
+        font-size: 1em;
+    }
+  
+    100% {
+      font-size: 1.2em;
+    }
+}
+  
+@keyframes link_hover {
+    0% {
+        font-size: 1em;
+    }
+    
+    100% {
+      font-size: 1.2em;
+    }
+}
+
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #145374; 
+    background-color: #f6f5f5;
+}
+
+.navigation_list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: space-between;
+    padding-top: 10px;
+}
+
+.nav_link {
+    color: #00334e;
+    text-decoration: none;
+    font-weight: 100;
+}
+
+.nav_link:hover, .nav_link:focus {
+    color: #ee6f57;
+    text-decoration: underline;
+    animation-name: link_hover;
+    animation-duration: 1s;
+}
+
 #main_main {
     display: flex;
     flex-direction: column;
-    align-content: center;
+    align-content: space-around;
     justify-content: center;
-    margin-top: auto;
-    margin-bottom: auto;
+}
+
+#main_main h1 {
+    font-size: 1.75em;
+}
+
+#main_main p {
+    margin-top: 5px;
+    font-weight: 100;
+    font-size: 1.25em;
 }
 
 #main_img {
+    align-self: center;
+    justify-self: center;
     border-radius: 50%;
     height: 50%;
     width: 50%;
     border-width: 5px;
     border-style: solid;
-    border-color: black;
+    border-color: #00334e;
+    margin-top: 30px;
+    animation-name: muthybaby_intro;
+    animation-duration: 3s;
 }
 
 .main_content {
     align-self: center;
     justify-self: center;
-}
-
-#main_headline {
-}
-
-#main_nav {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: center;
-}
-
-#main_list {
+    margin: 20px;
 }
 
 #main_body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
+    align-content: space-around;
 }
 
 footer {
     display: flex;
     justify-content: center;
     align-content: center;
+    margin-bottom: 15px;
 }
+
+footer p {
+    justify-self: center;
+    align-self: flex-end;
+    font-weight: 100;
+}
+
+
+/* Pallette: https://colorhunt.co/palette/201897 */
