--- a/css/style.css
+++ b/css/style.css
@@ -110,5 +110,35 @@ footer p {
     font-weight: 100;
 }
 
+#about_main {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(5, auto);
+    row-gap: 15px;
+}
+
+#about_headline {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 3;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+#about_bio {
+    grid-row: 2 / span 1;
+    grid-column: 1 / span 3;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+#about_hobbies {
+    grid-row: 4 / span 1;
+    grid-column: 1 / span 3;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
 
 /* Pallette: https://colorhunt.co/palette/201897 */
