--- a/css/style.css
+++ b/css/style.css
@@ -101,12 +101,14 @@ footer {
     display: flex;
     justify-content: center;
     align-content: center;
-    margin-bottom: 15px;
+    bottom: 5px;
+    position: fixed;
+    width: 100%
 }
 
 footer p {
     justify-self: center;
-    align-self: flex-end;
+    align-self: center;
     font-weight: 100;
 }
 
@@ -136,6 +138,38 @@ footer p {
 
 #about_hobbies {
     grid-row: 4 / span 1;
+    grid-column: 1 / span 3;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+#music_main {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+    row-gap: 15px;
+    margin-top: 30px;
+}
+
+#music_headline {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 3;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+#music_text {
+    grid-row: 2 / span 1;
+    grid-column: 1 / span 3;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+#music_recordings {
+    grid-row: 3 / span 1;
     grid-column: 1 / span 3;
     display: flex;
     justify-content: center;
