Contrast error addressed

--- a/css/style.css
+++ b/css/style.css
@@ -338,7 +338,7 @@ footer p {
 }
 
 #thanks_list {
-    background-color: #ee6f57;
+    background-color: #00334e;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
     width: 70vw;
     display: flex;
