--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,59 @@ body {
     text-decoration: underline;
 }
 
+.main_container {
+    display: grid;
+    row-gap: 15px;
+    padding-top: 25px;
+    width: 100vw;
+}
+
+.page_card p {
+    width: 75vw;
+    padding-top: 3vw;
+    padding-bottom: 3vw;
+    align-self: center;
+    justify-self: center;
+}
+
+.orange {
+    color: #ee6f57;
+}
+
+.headlines {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 2;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    font-size: 2.5em;
+    padding-bottom: 10px;
+}
+
+.page_card {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    justify-self: center;
+    width: 85vw;
+    background-color: #145374;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin: 5px;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+}
+
+.imgs_container {
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: space-around;
+    background-color: #ee6f57;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+    height: 90vw;
+}
+
 #home_main {
     display: flex;
     flex-direction: column;
@@ -146,10 +199,6 @@ body {
     font-style: italic;
 }
 
-.orange {
-    color: #ee6f57;
-}
-
 #home1, #home3 {
     justify-content: flex-start;
     align-content: center;
@@ -194,36 +243,13 @@ footer p {
     font-weight: 100;
 }
 
+#about_headline {
+    font-size: 2em;
+}
+
 #about_main {
-    display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, auto);
-    row-gap: 15px;
-    padding-top: 25px;
-    width: 100vw;
-}
-
-.headlines {
-    grid-row: 1 / span 1;
-    grid-column: 1 / span 2;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    font-size: 2em;
-    padding-bottom: 10px;
-}
-
-.page_card { /*about_bio, about_hobbies, video_desc, video_section (dir=column) */
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    justify-self: center;
-    width: 85vw;
-    background-color: #145374;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin: 5px;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
 #about_bio {
@@ -236,23 +262,9 @@ footer p {
     grid-column: 1 / span 2;
 }
 
-#about_hobbies p, #about_bio p {
-    width: 75vw;
-    padding-top: 5vw;
-    padding-bottom: 5vw;
-}
-
 #about_imgs {
     grid-row: 3 / span 1;
     grid-column: 1 / span 2;
-    overflow: hidden;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-content: space-around;
-    background-color: #ee6f57;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
-    height: 90vw;
 }
 
 .about_img {
@@ -262,25 +274,13 @@ footer p {
 }
 
 #video_main {
-    display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, auto);
-    row-gap: 15px;
-    padding-top: 25px;
-    width: 100vw;
 }
 
 #video_desc {
     grid-row: 2 / span 1;
     grid-column: 1 / span 2;
-}
-
-#video_desc p, #video_section p {
-    width: 75vw;
-    padding-top: 5vw;
-    padding-bottom: 5vw;
-    align-self: center;
-    justify-self: center;
 }
 
 #video_section h2 {
@@ -349,35 +349,33 @@ footer p {
 }
 
 #music_main {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, auto);
-    row-gap: 15px;
-    margin-top: 30px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, auto);
 }
 
-#music_headline {
-    grid-row: 1 / span 1;
-    grid-column: 1 / span 3;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-}
-
-#music_text {
+#music_ov {
     grid-row: 2 / span 1;
-    grid-column: 1 / span 3;
-    display: flex;
-    justify-content: center;
-    align-content: center;
+    grid-column: 1 / span 2;
 }
 
-#music_recordings {
+#music_studies {
+    grid-row: 4 / span 1;
+    grid-column: 1 / span 2;
+}
+
+#music_offers {
+    grid-row: 6 / span 1;
+    grid-column: 1 / span 2;
+}
+
+#music_vids {
+    grid-row: 5 / span 1;
+    grid-column: 1 / span 2;
+}
+
+#music_imgs {
     grid-row: 3 / span 1;
-    grid-column: 1 / span 3;
-    display: flex;
-    justify-content: center;
-    align-content: center;
+    grid-column: 1 / span 2;
 }
 
 /* Pallette: https://colorhunt.co/palette/201897 */
