--- a/css/style.css
+++ b/css/style.css
@@ -378,4 +378,58 @@ footer p {
     grid-column: 1 / span 2;
 }
 
+#gigs_main div {
+    background-color: #145374;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    display: flex;
+    flex-direction: row;
+    width: 90vw;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+    border-style: solid;
+    border-color: #f6f5f5;
+    animation-name: slide_up;
+    animation-duration: 2s;
+}
+
+.right_stick {
+    justify-content: flex-start;
+    align-content: center;
+    align-self: flex-end;
+    border-radius: 50px 0px 0px 50px;
+    border-width: 3px 0px 3px 3px;
+}
+
+.left_stick {
+    justify-content: flex-end;
+    align-content: center;
+    border-radius: 0px 50px 50px 0px;
+    border-width: 3px 3px 3px 0px;
+}
+
+#gigs_main {
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+    justify-content: center;
+    width: 100vw;
+    overflow: hidden;
+}
+
+#gigs_main h1 {
+    font-size: 2.5em;
+    font-weight: 700;
+    padding-top: 25px;
+    align-self: center;
+    justify-self: center;
+    padding-bottom: 25px;
+}
+
+.gigs_content {
+    align-self: center;
+    justify-self: center;
+    font-size: 1.25em;
+    margin: 15px;
+}
+
 /* Pallette: https://colorhunt.co/palette/201897 */
