--- a/css/style.css
+++ b/css/style.css
@@ -449,14 +449,18 @@ footer p {
 
 #contact_main {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, auto);
+    grid-template-rows: repeat(3, auto);
 }
 
 #contact_headline {
     font-size: 1.75em;
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 2;
 }
 
 #contact_form {
+    grid-row: 2 / span 1;
+    grid-column: 1 / span 2;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -464,7 +468,6 @@ footer p {
     justify-content: center;
     justify-items: center;
     padding-top: 10px;
-    margin-left: 15vw;
     width: 70vw;
 }
 
@@ -495,6 +498,10 @@ footer p {
 #contact_form textarea {
     height: 75vw;
     width: 60vw;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1em;
+    padding: 5px;
+    resize: vertical;
 }
 
 #submit {
@@ -516,6 +523,11 @@ footer p {
     width: 30vw;
     margin-left: auto;
     margin-right: auto;
+}
+
+#contact_imgs {
+    grid-row: 3 / span 1;
+    grid-column: 1 / span 2;
 }
 
 /* Pallette: https://colorhunt.co/palette/201897 */
