--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,15 @@ body {
     margin-right: auto;
     text-decoration: none;
     font-weight: 100;
-    opacity: 0;
+    opacity: 100;
+    align-self: center;
+    justify-self: center;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .skip:hover, .skip:focus {
