--- a/css/style.css
+++ b/css/style.css
@@ -53,10 +53,11 @@ body {
 }
 
 .current_page {
-    font-size: 1.4em;
-    color: #ee6f57;
+    color: #f6f5f5;
+    font-size: 1.25em;
     text-decoration: none;
     font-weight: 550;
+    font-style: italic;
 }
 
 .skip {
@@ -120,7 +121,7 @@ header {
 }
 
 .orange {
-    color: #ee6f57;
+    color: #f6f5f5;
 }
 
 .headlines {
@@ -131,6 +132,7 @@ header {
     align-content: center;
     font-size: 2.5em;
     padding-bottom: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .page_card {
@@ -165,6 +167,7 @@ header {
     justify-content: center;
     width: 100vw;
     overflow: hidden;
+    font-family: 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #home_main h1 {
@@ -181,7 +184,7 @@ header {
     width: 80vw;
     border-width: 5px;
     border-style: solid;
-    border-color: #f6f5f5;
+    border-color: #ee6f57;
     margin-top: 30px;
     animation-name: muthybaby_intro;
     animation-duration: 2s;
@@ -226,7 +229,6 @@ header {
     border-width: 3px 3px 3px 0px;
     animation-name: slide_up;
     animation-duration: 2s;
-    color: #ee6f57
 }
 
 #home_body {
@@ -543,6 +545,10 @@ footer p {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
+#reason {
+    color: black;
+}
+
 #contact_form input[type=text], #contact_form select {
     border-radius: 50px;
     width: 60vw;
@@ -565,7 +571,7 @@ footer p {
     justify-content: center;
     align-content: center;
     justify-self: center;
-    background-color: #ee6f57;
+    background-color: #00334e;
     padding: 10px;
     margin: 5px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
