--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,39 @@
-@-webkit-keyframes muthybaby_intro {
+@-webkit-keyframes fade_out {
     0% {
-        width: 70vw;
-        height: 70vw;
-        opacity: 0.3;
+        opacity: 1;
     }
   
     100% {
-        width: 80vw;
-        height: 80vw;
+        opacity: 0;
+    }
+}
+  
+@keyframes fade_out {
+    0% {
+        opacity: 1;
+    }
+  
+    100% {
+        opacity: 0;
+    }
+}
+
+@-webkit-keyframes fade_in {
+    0% {
+        opacity: 0;
+    }
+  
+    100% {
         opacity: 1;
     }
 }
   
-@keyframes muthybaby_intro {
+@keyframes fade_in {
     0% {
-        width: 70vw;
-        height: 70vw;
-        opacity: 0.3;
+        opacity: 0;
     }
   
     100% {
-        width: 80vw;
-        height: 80vw;
         opacity: 1;
     }
 }
@@ -42,7 +54,27 @@
     }
   
     100% {
-      margin-top: 8px
+      margin-top: 8px;
+    }
+}
+
+@-webkit-keyframes slide_up_tablet {
+    0% {
+        margin-top: 300px;
+    }
+
+    100% {
+        margin-top: 20px;
+  }
+}
+  
+@keyframes slide_up_tablet {
+    0% {
+      margin-top: 300px;
+    }
+  
+    100% {
+      margin-top: 20px;
     }
 }
 
@@ -71,7 +103,7 @@ body {
     justify-self: center;
 }
 
-.skip a{
+.skip a {
     background: #145374;
     color: #f6f5f5;
     text-decoration: none;
@@ -82,9 +114,9 @@ body {
     z-index: 1;
     position: absolute;
     top: -40px;
-  }
+}
   
-.skip a:focus{
+.skip a:focus {
     top: 0px;
 }
 
@@ -189,20 +221,52 @@ header {
     font-size: 2.5em;
     font-weight: 700;
     padding-top: 15px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
 }
 
-#home_img {
+.flip {
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    perspective: 1000px;
     align-self: center;
     justify-self: center;
+    margin-top: 25px;
+    margin-bottom: 10px;
+}
+
+.flip_inner {
+    position: relative;
+    width: 120%;
+    height: 105%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.flip:hover .flip_inner, .flip:focus .flip_inner {
+    transform: rotateY(180deg);
+}
+
+.flip_front, .flip_back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    background-color: #00334e;
+}
+
+.flip_back {
+    transform: rotateY(180deg);
+}
+
+.home_img {
     border-radius: 50%;
-    height: 80vw;
-    width: 80vw;
     border-width: 5px;
     border-style: solid;
     border-color: #ee6f57;
-    margin-top: 30px;
-    animation-name: muthybaby_intro;
-    animation-duration: 2s;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -214,7 +278,7 @@ header {
     margin: 15px;
 }
 
-#home_main div {
+#home1, #home2, #home3 {
     background-color: #145374;
     margin-top: 8px;
     margin-bottom: 8px;
@@ -225,6 +289,8 @@ header {
     border-style: solid;
     border-color: #f6f5f5;
     font-style: italic;
+    animation-name: slide_up;
+    animation-duration: 2s;
 }
 
 #home1, #home3 {
@@ -233,8 +299,6 @@ header {
     align-self: flex-end;
     border-radius: 50px 0px 0px 50px;
     border-width: 3px 0px 3px 3px;
-    animation-name: slide_up;
-    animation-duration: 2s;
 }
 
 #home2 {
@@ -242,8 +306,6 @@ header {
     align-content: center;
     border-radius: 0px 50px 50px 0px;
     border-width: 3px 3px 3px 0px;
-    animation-name: slide_up;
-    animation-duration: 2s;
 }
 
 #home_body {
@@ -612,103 +674,47 @@ footer p {
     width: 80vw;
 }
 
-@-webkit-keyframes fade_in {
-    0% {
-        opacity: 0;
-    }
-  
-    100% {
-        opacity: 100;
+.logo, .title {
+    display: none;
+}
+
+@media screen and (prefers-reduced-motion: reduce){
+    * {
+        animation: none;
     }
 }
 
-@keyframes fade_in {
-    0% {
-        opacity: 0
+@media screen and (min-width: 600px){
+    header {
+        font-size: 1.6em;
     }
-  
-    100% {
-        opacity: 100;
+
+    .flip {
+        margin-top: 50px;
+        margin-bottom: 20px;
+    }
+
+    #home_main h1 {
+        font-size: 6em !important;
+    }
+
+    .home_content {
+        font-size: 3.5em;
+    }
+
+    #home1, #home2, #home3 {
+        animation-name: slide_up_tablet;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    .headlines, #contact_headline, #about_headline {
+        font-size: 4em;
+    }
+
+    footer {
+        padding-top: 80px;
     }
 }
-
-
-/*
-#contact_imgs .small_img:hover, #contact_imgs .small_img:focus {
-    width: 45vw;
-    height: 45vw;
-    border-color: #f6f5f5;
-    border-width: 0;
-    border-style: solid;
-    animation-name: small_image_hover;
-    animation-duration: 2s;
-}
-
-#contact_imgs .large_img:hover, #contact_imgs .large_img:focus {
-    width: 95vw;
-    height: 55vw;
-    border-color: #f6f5f5;
-    border-width: 0;
-    border-style: solid;
-    animation-name: large_image_hover;
-    animation-duration: 2s;
-}
-
-@-webkit-keyframes small_image_hover {
-    0% {
-        width: 40vw;
-        height: 40vw;
-        border-width: 0;
-    }
-  
-    100% {
-        width: 45vw;
-        height: 45vw;
-        border-width: 3px;
-    }
-}
-
-@keyframes small_image_hover {
-    0% {
-        width: 40vw;
-        height: 40vw;
-        border-width: 0;
-    }
-  
-    100% {
-        width: 45vw;
-        height: 45vw;
-        border-width: 3px;
-    }
-}
-  
-@-webkit-keyframes large_image_hover {
-    0% {
-        width: 90vw;
-        height: 50vw;
-        border-width: 0;
-    }
-  
-    100% {
-        width: 95vw;
-        height: 55vw;
-        border-width: 3px;
-    }
-}
-
-@keyframes large_image_hover {
-    0% {
-        width: 90vw;
-        height: 50vw;
-        border-width: 0;
-    }
-  
-    100% {
-        width: 95vw;
-        height: 55vw;
-        border-width: 3px;
-    }
-} 
-*/
 
 /* Pallette: https://colorhunt.co/palette/201897 */
