--- a/css/style.css
+++ b/css/style.css
@@ -130,16 +130,17 @@ body {
 }
 
 .drop_button {
-    width: 30vw;
-    margin-left: 35vw;
-    margin-right: 35vw;
+    width: 15vw;
+    height: 15vw;
+    margin-left: 42.5vw;
     font-size: 1.5em;
     color: #f6f5f5;
     margin-top: 10px;
-    margin-bottom: 5px;
     border: none;
     background-color: transparent;
     cursor: pointer;
+    background: url("../images/menu_icon.png");
+    background-size: 100% 100%;
 }
 
 .drop_button:hover, .drop_button:focus {
